--- a/wishlist_app/wishlist/templates/wishlist/home.html
+++ b/wishlist_app/wishlist/templates/wishlist/home.html
@@ -10,12 +10,13 @@
 <body>
     <h1>Wishlist</h1>
     <nav>
-        {% if not user.is_authenticated %}
+        {% comment %} {% if not user.is_authenticated %}
             <a href="{% url 'accounts:login' %}">Log in</a> |
-        {% endif %}
+        {% endif %} {% endcomment %}
 
         {% if user.is_authenticated %}
-            <a href="{% url 'wishlist:wishlist_list' %}">Books📚</a> |
+            <a href="{% url 'wishlist:home' %}">Wishlists</a> |
+            <a href="{% url 'accounts:profile' %}">Profile📚</a> |
             {% comment %} <a href="{% url 'logout' %}" class="logout">Log out</a> {% endcomment %}
         {% endif %}
     </nav>  
