--- a/wishlist_app/accounts/templates/accounts/login.html
+++ b/wishlist_app/accounts/templates/accounts/login.html
@@ -24,7 +24,7 @@
     </form>
 
     <p>Don't have an account?</p>
-    {% comment %} <a href="{% url 'register' %}">
+    <a href="{% url 'accounts:register' %}">
         <button type="button" style="background-color:rgb(234, 128, 101)" class="butt">Register</button>
-    </a> {% endcomment %}
+    </a>
 {% endblock %}
